[package]
name = "tarkov-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", rev = "0214404d" }

[build-dependencies]
embed-resource = "2.4"
winres = "0.1.12"
